--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,6 @@
     <string name="nama">Nama</string>
     <string name="alamat">Alamat</string>
     <string name="notlp">No Telepon</string>
-    <string name="btn_submit">Submit</string>
-    <string name="btn_back">Back</string>
+    <string name="btn_submit">Selanjutnya</string>
+    <string name="btn_back">Batal</string>
 </resources>
