--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="flavor">Rasa</string>
     <string name="subtotal_price">Subtotal : Rp %s</string>
     <string name="total_price">Total</string>
-    <string name="nama">Nama</string>
+    <string name="nama">Nama Pelanggan</string>
     <string name="alamat">Alamat</string>
     <string name="notlp">No Telepon</string>
     <string name="btn_submit">Selanjutnya</string>
